--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "gulp",
     "doSvgSprite": "gulp doSvgSprite",
+    "minifyImages": "gulp img",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Soshinoya",
