--- a/package.json
+++ b/package.json
@@ -7,23 +7,24 @@
     "start": "gulp",
     "doSvgSprite": "gulp doSvgSprite",
     "minifyImages": "gulp img",
+    "preinstall": "npx npm-force-resolutions",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Soshinoya",
   "license": "ISC",
   "devDependencies": {
-    "browser-sync": "^2.27.7",
+    "browser-sync": "^2.23.7",
     "del": "^6.0.0",
-    "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^8.0.0",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^6.1.0",
     "gulp-cli": "^2.3.0",
     "gulp-concat": "^2.6.1",
     "gulp-htmlmin": "^5.0.1",
-    "gulp-imagemin": "^7.1.0",
+    "gulp-imagemin": "^4.1.0",
     "gulp-jade": "^1.1.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.0.0",
-    "gulp-svg-sprite": "^2.0.3",
+    "gulp-svg-sprite": "^1.5.0",
     "gulp-uglify": "^3.0.2",
     "jquery": "^3.6.0",
     "sass": "^1.43.4",
@@ -32,5 +33,9 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "gsap": "^3.12.2"
+  },
+
+  "overrides": {
+    "graceful-fs": "^4.2.11"
   }
 }
